# pyramid_retry

./: .coveragerc  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  rtd.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-tests.yml
docs/: api.rst  conf.py  glossary.rst  index.rst
src/pyramid_retry/: __init__.py  compat.py
tests/: conftest.py  test_it.py
