[wheel]
universal = 1

[metadata]
license_file = LICENSE.txt

[flake8]
exclude =
    pyramid_retry/compat.py
builtins =
    unicode
show-source = True
max-line-length = 80

[check-manifest]
ignore =
    .gitignore
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true

[tool:pytest]
python_files = test_*.py
testpaths =
    src/pyramid_retry
    tests
